@@ -1,7 +1,8 @@
 Version : 4.12.4 #XG1
 - Add About revised, removed more Richtextbox and added a matrix animation with the names of the developers, new links, and new information.
-- Add Sound Loop
+- Add Sound Loop.
 - Add functionality to update the count of occupied and free sound IDs in real-time when sounds are added, removed, or the view is reloaded.
+- Removed Escape key function, changed F2 key function to Ctrl+E, added Space key function to play/stop sound.
 
 Version : 4.12.3 #XG1
 - Add Items Image Colors and Update.
